v0.4.2 fix nav menu on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,7 +16,6 @@ html, body {
 
 @media screen and (max-width:breakpoints.$screen-md-max) {
     nav {
-        // background-image: linear-gradient(to right, rgb(45,45,45,1) 75% , rgb(255,215,0,0.9));
         background: variables.$bb_yellow;
         overflow: hidden;
         position: fixed;
@@ -61,16 +60,17 @@ html, body {
         .nav-mobile__menu {
             position: fixed;
             left: 0%;
-            top: 38px;
-            gap: 100px;
+            top: 46px;
+            gap: 20px;
             width: 100%;
-            height: 100vh;
+            height: 80%;
             display: flex;
             flex-direction: column;
             background-color: variables.$bb_black;
             text-align: center;
             justify-content: center;
             transition: 0.3s;
+            overflow-y: scroll;
         }
 
         .hamburger {
